--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/material-bottom-tabs": "^5.2.19",
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
     "base-64": "^0.1.0",
@@ -20,6 +22,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-picker": "^2.3.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
